--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@prisma/client": "^5.5.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.0"
@@ -20,6 +21,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/morgan": "^1.9.9",
     "axios": "^1.6.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
